--- a/folder/form-registration.html
+++ b/folder/form-registration.html
@@ -9,5 +9,6 @@
     <p>Saya sedang belajar git</p>
     <p>update isi form</p>
     <h2>Git tutorial</h2>
+    <h1>coba tambah lagi</h1>
 </body>
 </html>
